--- a/project/composer.json
+++ b/project/composer.json
@@ -11,7 +11,9 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "easycorp/easyadmin-bundle": "^4.4",
         "fakerphp/faker": "^1.20",
+        "friendsofsymfony/ckeditor-bundle": "^2.4",
         "karser/karser-recaptcha3-bundle": "^0.1.23",
         "knplabs/knp-paginator-bundle": "^6.0",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -26,7 +28,7 @@
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
         "symfony/http-client": "6.1.*",
-        "symfony/intl": "6.1.*",
+        "symfony/intl": "^6.1",
         "symfony/mailer": "6.1.*",
         "symfony/mime": "6.1.*",
         "symfony/monolog-bundle": "^3.0",
@@ -82,7 +84,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
